Fixed duration UI on smaller devices

--- a/idea/duration/duration.component.scss
+++ b/idea/duration/duration.component.scss
@@ -1,6 +1,7 @@
 .durationItem {
   .value {
     max-width: none;
+    width: 100%;
     pointer-events: all;
     ion-input {
       display: inline-block;
